data/all_generated_tests/raw_wast_tests/block_ImproperFunctionCallorReturnHandling_2499.wast
;; A `block` instruction containing a combination of function calls, a `call_indirect`, and return instructions intermixed with conditional branches (`br_if`), focusing on how function calls and branching within blocks are properly executed and returned. This ensures precise handling of both direct and indirect function calls interlaced with branching and return operations.

(assert_invalid
  (module 
    (func $calledFunc (param i32) (result i32)
      local.get 0
      i32.const 1
      i32.add
    )
    (type $type0 (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $calledFunc)
    (func $mainFunc (param i32) (result i32)
      (block (result i32)
        local.get 0
        i32.const 10
        i32.lt_s
        br_if 0
        (call $calledFunc (local.get 0))
        (block (call_indirect (type $type0) (local.get 0) (local.get 0)))
        return
      )
    )
  )
  "type mismatch"
)